# MesmerGlass

./: .gitignore  LICENSE  NOTES.md  README.md  README_modular.md  ROADMAP.md  Training.json  debug_spiral_test.py  gl_diag.txt  gpu_check_qt.py  mesmerglass_angle_test.bat  mesmerglass_gl_fix_log.bat  mesmerglass_qt_diag.bat  message_pack.json  pytest.ini  pytest_full_log.txt  qt_diag_angle.txt  qt_diag_desktop.txt  qt_plugins_log.txt  repro_print.py  requirements.txt  run.py  run_tests.py  session_state.json  spiral-overlay.md  temp_cli_baseline.py  temp_state.json  test_antialiasing.py  test_bluetooth_scan.py  test_enhanced_antialiasing.py  test_gui_controls.py  test_offscreen_artifacts.py  test_pack.json  test_precision_enhancement.py  test_spiral_params.py  textfx_pre.py  video-playback-performance-plan.md
cuelists/: example_short_session.cuelist.json
docs/: README.md  cli.md  dev-setup.md  device-control.md  features.md  testing.md  ui-components.md  video-engine.md  virtual-devices.md
examples/: README.md
mesmerglass/: __init__.py  app.py  cli.py  logging_utils.py  platform_paths.py  qss.py  session_manager.py
mesmerglass/vr/android-client/app/src/main/cpp/: CMakeLists.txt  frame_decoder.cpp  stereo_renderer.cpp  vr_renderer.cpp
scripts/: add_firewall_rules.ps1  android_build_install_debug.ps1  apply_accel_hidden_fix.py  av_probe.py  build_windows_exe.ps1  calibrate_zoom.py  generate_mesmervisor_icons.py  generate_soak_session.py  integration_jumpiness_test.py  make_soak_diff.py  multi_speed_test.py  optimize_images.py  quick_multi_speed_test.py  setup.ps1  (+10 more)
(+358 files in other folders)
